--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>IAmenara — Simplificando el aprendizaje</title>
 
   <!-- Fuente opcional (puedes quitarla si no tienes conexión) -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700;900&display=swap" rel="stylesheet">
 
   <style>
